--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,33 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+.strike {
+  text-decoration: line-through;
+}
+.container {
+  width: 25%;
+  margin: 35px;
+  position: relative;
+  left: 200px;
+  display: inline-grid;
+  flex-wrap: wrap;
+  flex-direction: column;
+  text-align: center;
+  background: #6a3093; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #fdd9f2,
+    #cdc0ff
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #fdd9f2,
+    #cdc0ff
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
+  min-height: 40vh;
+  border-radius: 10px;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
